[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/WaveCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/WaveLine.gd" type="Script" id=2]
[ext_resource path="res://ui/WaveCard.gd" type="Script" id=3]

[node name="WaveLine" type="Node2D"]
script = ExtResource( 2 )

[node name="Cards" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 79

[node name="WaveCard" parent="Cards" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 40.0

[node name="WaveCard2" parent="Cards" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 79.0
margin_right = 79.0
margin_bottom = 40.0

[node name="WaveCard3" parent="Cards" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 158.0
margin_right = 158.0
margin_bottom = 40.0
script = ExtResource( 3 )
